--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mes-produits",
+  "name": "mes-evenements",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:MesProduits": "node dist/mes-produits/server/server.mjs"
+    "serve:ssr:MesEvenements": "node dist/mes-evenements/server/server.mjs"
   },
   "private": true,
   "dependencies": {
